syntax = "proto3";

package ark_msgs;

import "ark_msgs/translation.proto";
import "ark_msgs/rotation.proto";

// A rigid transform between two coordinate frames.
message RigidTransform {
  Translation translation = 1;
  Rotation rotation = 2;
  string child_id = 3;
  string parent_id = 4;
}
